istio/envoyfilter.yaml
apiVersion: networking.istio.io/v1beta1
kind: EnvoyFilter
metadata:
  name: body-to-header
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.lua
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
          inlineCode: |
            function envoy_on_request(request_handle)
              local body = request_handle:body()
              if body then
                local json = require("cjson")
                local success, data = pcall(json.decode, body)
                if success and data.asyncPattern and data.asyncPattern.entities and data.asyncPattern.entities.environment then
                  request_handle:headers():add("x-env-pattern", data.asyncPattern.entities.environment)
                end
              end
            end
