istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: async-pattern-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        prefix: /api
      headers:
        x-env-pattern:
          exact: "test"
    route:
    - destination:
        host: service1
        port:
          number: 80
  - route:
    - destination:
        host: service2.a-product.svc.cluster.local
        port:
          number: 80
